[package]
name = "pcan-basic"
version = "0.1.0"
authors = ["Timo Kröger <timokroeger93@gmail.com>"]
edition = "2018"

[dependencies]
embedded-can = "0.3.0"
nb = "1.0.0"
pcan-basic-sys = { path = "../pcan-basic-sys" }
winapi = { version = "0.3.9", features = ["winbase", "synchapi"] }

[dev-dependencies]
anyhow = "1.0"
